fix: improve error message retrieval, for clarity